--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,4 +1,5 @@
 {
+	"exclude": ["node_modules/*", "__sapper__/*", "public/*"],
   "compilerOptions": {
     "moduleResolution": "Node",
     "target": "ESNext",
@@ -24,7 +25,11 @@
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable this if you'd like to use dynamic types.
      */
-    "checkJs": true
+    "checkJs": true,
+    "paths": {
+      "src/*": ["src/*"],
+      "@stores/*": ["src/stores/*"]
+    },
   },
   /**
    * Use global.d.ts instead of compilerOptions.types
